# SOCKS5-Performance-Testing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Client/: Client.cpp  Client.hpp
Timer/: Timer.hpp
